--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,7 +417,7 @@ h6 {
   width: 100%;
   height: 100vh;
   /* background: url("../PADsPics/NewBanner.JPG") top center; */
-  background: url("../img/Cinderella/cind29.JPG") top center; */
+  background: url("../img/Cinderella/cind29.JPG") top center;
   background-size: cover;
   position: relative;
 }
