--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1574,83 +1574,77 @@ section {
 }
 
 /**Added Flip card css**/
-/* entire container, keeps perspective */
-.flip-container {
-	perspective: 1000px;
-  margin: 10px;
-}
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-.flip-container, .front, .back {
-	width: 280px;
-	height: 350px;
+/* Reseting */
+
+.flipcontainer{
+    transform-style: preserve-3d;
 }
 
-/* flip speed goes here */
-.flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-
-	position: relative;
+.flipcontainer .box{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    cursor: pointer;
 }
 
-/* hide back of pane during swap */
-.front, .back {
-	backface-visibility: hidden;
-
-	position: absolute;
-	top: 0;
-	left: 0;
+.flipcontainer .box .body{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: 0.9s ease;
 }
 
-/* front pane, placed above back */
-.front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
+
+
+.flipcontainer .box .body .imgContainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
 }
 
-/* back, initially hidden pane */
-.back {
-  background: lightblue;
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+.flipcontainer .box .body .imgContainer img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.back-logo {
-  position: absolute;
-  top: 40px;
-  left: 90px;
-  width: 160px;
-  height: 117px;
-  background: url(assets/img/team/Clare.jpg) 0 0 no-repeat;
+.flipcontainer .box .body .content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    transform: rotateY(180deg);
 }
 
-.back-title {
-  font-weight: bold;
-  color: #00304a;
-  position: absolute;
-  top: 10px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  text-shadow: 0.1em 0.1em 0.05em #acd7e5;
-  font-family: Courier;
-  font-size: 22px;
+.flipcontainer .box:hover .body{
+    transform: rotateY(180deg);
 }
 
-.back p {
-  position: absolute;
-  bottom: 40px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  padding: 0 20px;
-  font-size: 18px;
+.flipcontainer .box .body .content div{
+    transform-style: preserve-3d;
+    padding: 20px;
+    background: linear-gradient(45deg, #FE0061,#FFEB3B);
+    transform: translateZ(100px);
+}
+
+.flipcontainer .box .body .content div h3{
+    letter-spacing: 1px;
 }
